# Quantfi

./: .gitignore  .pre-commit-config.yaml  BACKTEST_FINDINGS.md  Dockerfile  README.md  TODOS_PHASE1.md  TODO_PR.md  Transaction Cost Estimation For Portfolios.docx  backend_test.py  backtest_output.txt  comprehensive_backtest.py  conftest.py  crypto_state.json  design_guidelines.json  docker-compose.yml  package-lock.json  package.json  paper_bot_state.json  paper_ledger.jsonl  playwright.config.js  pyproject.toml  quick_backtest.py  quick_backtest_results.json  requirements-bot.txt  requirements-engine.txt  run_phase2_backtest.py  start.sh  test_gold_symbols.py  test_yfinance_basic.py
.cursor_memory/: phase1_understanding.md
.emergent/: emergent.yml
archive_removed/: README.md
backend/: app_config.py  backtest.py  container.py  data_providers.py  indicators.py  llm_service.py  models.py  phase1_routes.py  requirements.txt  scoring.py  server.py
backtest_logs/: fetch_log.json  validation_results.json
backtester/: __init__.py  allocation_engine.py  dca_portfolio_sim.py  diagnostics.py  evaluations.py  portfolio_simulator.py  purged_validation.py  signal_sweep.py
bot/: __init__.py  bayes_online.py  execution.py  features.py  ingestion.py  regime.py  scoring.py
config/: phase1.yml  phase3.yml  phaseA.yml  phaseB.yml  phase_refactor.yml  settings.yml  tuning_allocation.yml  tuning_cpcv.yml  tuning_cpcv_bot.yml  tuning_cpcv_costfree.yml  tuning_cpcv_debug.yml  tuning_cpcv_tuned.yml  tuning_cpcv_wide.yml
crypto/: calendar.py  costs.py
data/: __init__.py  cache.py  fetcher.py  preprocess.py
data_cache/: AAPL_1d.csv  AAPL_1wk.csv  GC_F_1d.csv  GC_F_1wk.csv  NFLX_1d.csv  NFLX_1wk.csv  ORCL_1d.csv  RELIANCE.NS_1d.csv  RELIANCE.NS_1wk.csv  SILVERIETF.NS_1d.csv  SI_F_1d.csv  SI_F_1wk.csv  SPY_1d.csv  SPY_1wk.csv  TCS.NS_1d.csv  TCS.NS_1wk.csv  _NSEI_1d.csv  _NSEI_1wk.csv  fetch_metadata.json
data_snapshots/: refactor_verification.parquet  verification_snapshot.parquet
docs/: API.md  ARCHITECTURE.md  AUDIT_LEAKAGE_AND_VALIDATION.md  DEPLOYMENT.md  ECDF_NORMALIZATION_AUDIT.md  FORWARD_LOOKING_BIAS_FIX_REPORT.md  PATTERNS.md  PHASE1_CODEBASE_SUMMARY.md  (+7 more)
(+430 files in other folders)
