[project]
name = "quantfi"
version = "2.0.0"
description = "Quantitative trading platform with DCA intelligence, sentiment analysis, crypto bot, and portfolio simulation"
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | frontend
  | node_modules
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
exclude = [".git", ".venv", "frontend", "node_modules", "build"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["backend", "engine"]
skip_glob = ["frontend/*", "node_modules/*", ".venv/*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["backend.*", "engine.*"]
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
